--- a/src/components/Css/Header.css
+++ b/src/components/Css/Header.css
@@ -21,14 +21,15 @@ li{
 /* HEADER */
 header{
     position: relative;
-    padding: 25px 45.8px ;
+    padding: 10px 45.8px ;
+    z-index: 5;
 }
 
 .navbar{
     width: 100%;
-    height: 50px;
-    max-width: 1200px;
-    margin: 0 auto;
+    height: 40px;
+    max-width: 100vw;
+    margin: 0 0 10px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -37,8 +38,13 @@ header{
 .navbar .logo .a{
     font-Size: 1.5rem;
     font-weight: bold;
-    margin-left: -5rem;
-    margin-right: 4rem;
+    margin-left: 1rem;
+    margin-right: 3rem;
+}
+
+.navbar .logo .a img{
+    width: 250.52px;
+    height: 70px;
 }
 
 .navbar .links{
