--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@ body {
   margin: 0;
   /* place-items: center; */
   min-width: 320px;
-  min-height: 100vh;
+  min-height: auto;
+  overflow-x: hidden;
 }
 
 h1 {
