--- a/src/components/Css/Header.css
+++ b/src/components/Css/Header.css
@@ -1,143 +1,180 @@
-li{
+li {
   list-style: none;
 }
 
-
-.a {
+/* .a {
   text-decoration: none;
   color: rgba(71, 119, 105, 0.8);
   text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-  font-family: Patua One;
   font-size: 20px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
-}
-
-.a:hover{
-    color: orange
-}
+ 
+} */
 
 /* HEADER */
-header{
-    position: relative;
-    padding: 10px 45.8px ;
-    z-index: 5;
+header {
+  position: relative;
+  padding: 10px 45.8px;
+  z-index: 5;
 }
 
-.navbar{
-    width: 100%;
-    height: 40px;
-    max-width: 100vw;
-    margin: 0 0 10px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.navbar {
+  width: 100%;
+  height: 40px;
+  max-width: 100vw;
+  margin: 0 0 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navbar .logo .a{
-    font-Size: 1.5rem;
-    font-weight: bold;
-    margin-left: 1rem;
-    margin-right: 3rem;
+.navbar .logo .a {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-left: 1rem;
+  margin-right: 3rem;
 }
 
-.navbar .logo .a img{
-    width: 250.52px;
-    height: 70px;
+.navbar .logo .a img {
+  width: 250.52px;
+  height: 70px;
 }
 
-.navbar .links{
-    display: flex;
-    gap: 2rem;
-    width: 70%;
+.navbar .links {
+  display: flex;
+  gap: 2rem;
+  width: 70%;
 }
 
-.navbar .toggle_btn{
-    color: #0d0d0d;
-    font-size: 1.5rem;
-    cursor: pointer;
-    display: none;
+.navbar .links .a {
+  font-weight: 400;
+  font-size: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 20px 0px;
+  margin: 0px 20px;
+  display: inline-block;
+  position: relative;
+  opacity: 0.75;
+  font-style: normal;
+  line-height: normal;
+  font-family: Arial, Helvetica, sans-serif; /**Patua One**/
 }
 
-.action_btn{
-    background-color: orange;
-    color: black;
-    padding: 0.5rem 1rem;
-    border: none;
-    outline: none;
-    border-radius: 20px;
-    font-size: 0.8rem;
-    font-weight: bold;
-    cursor: pointer;
+.navbar .links .a:hover {
+  opacity: 1;
 }
 
-.action_btn:hover{
-    scale: 1.05;
-    color: black;
+.navbar .links .a::before {
+  transition: 500ms;
+  height: 2px;
+  content: "";
+  position: absolute;
+  background-color: #eb3;
 }
 
-.action_btn:active{
-    scale: 0.95;
+.navbar .links .a::before {
+  width: 0%;
+  bottom: 10px;
+}
+
+.navbar .links .a:hover::before {
+  width: 100%;
+}
+
+.navbar .links .active {
+  /* text-decoration: underline rgb(238, 197, 14); */
+  font-weight: 700;
+  transform: scaleX(1.1);
+  letter-spacing: 1px;
+  transition: 200ms ease;
+}
+
+.navbar .toggle_btn {
+  color: #0d0d0d;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+
+.action_btn {
+  background-color: orange;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.action_btn:hover {
+  scale: 1.05;
+  color: black;
+}
+
+.action_btn:active {
+  scale: 0.95;
 }
 
 /* DROPDOWN MENU */
-.dropdown_menu{
-    position : absolute;
-    right: 2rem;
-    top: 70px;
-    min-width: 60vw;
-    margin-left: 2rem;
-    display: block;
-    /* height: 0; */
-    background: rgba(0,0,0,0.1);
-    backdrop-filter: blur(15px);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+.dropdown_menu {
+  position: absolute;
+  right: 2rem;
+  top: 70px;
+  min-width: 60vw;
+  margin-left: 2rem;
+  display: block;
+  /* height: 0; */
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15px);
+  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 /* .dropdown_menu .open{
     height:240px;
 } */
 
-.dropdown_menu .a{
-    padding: 0.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.dropdown_menu .a {
+  padding: 0.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.dropdown_menu .action_btn{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.dropdown_menu .action_btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-
 
 /* RESPONSIVE DESIGN */
-@media (max-width: 990px){
-    .navbar .links,.navbar .action_btn{
-        display:none;
-    }
+@media (max-width: 990px) {
+  .navbar .links,
+  .navbar .action_btn {
+    display: none;
+  }
 
-    .navbar .toggle_btn{
-        display: block;
-    }
+  .navbar .toggle_btn {
+    display: block;
+  }
 
-    .dropdown_menu{
-        display: block;
-    }
+  .dropdown_menu {
+    display: block;
+  }
 }
 
-@media (min-width:323px) and (max-width :990){
-    .navbar .toggle_btn{
-        margin-top: 70px;
-    }
+@media (min-width: 323px) and (max-width: 990) {
+  .navbar .toggle_btn {
+    margin-top: 70px;
+  }
 }
 
-@media (max-width: 323px){
-    .navbar .toggle_btn{
-        margin-top: 120px;
-    }
+@media (max-width: 323px) {
+  .navbar .toggle_btn {
+    margin-top: 120px;
+  }
 }
