--- a/src/pages/Css/Drafting2.css
+++ b/src/pages/Css/Drafting2.css
@@ -48,15 +48,12 @@
   display: flex;
   justify-content: center;
   border-right: 2px solid rgba(0,0,0,0.2);
+  max-height: 110vh;
+  overflow-y: scroll;
 }
 .drafting2 .row .sampleDiv .sample {
   border: 2px solid black;
   padding: 0 40px;
-}
-
-.sample p {
-  font-size: 14px;
-  font-weight: 400;
 }
 
 @media screen and (max-width: 992px) {
