--- a/src/pages/Css/advocates.css
+++ b/src/pages/Css/advocates.css
@@ -17,7 +17,7 @@
 }
 
 .advocateElement{
-    border: 2px solid black;
+    border: 2px solid rgba(0,0,0,0.7);
     border-radius: 30px;
     margin: 20px;
     padding: 5px;
