--- a/src/pages/Css/advocatesElement.css
+++ b/src/pages/Css/advocatesElement.css
@@ -1,15 +1,19 @@
 .advocateElement{
   width: 100%;
-  height: 70vh;
+  height: 80vh;
+}
+.advocateElement .row{
+  width: 100%;
+  height: 75%;
 }
 .advocateElement Img{
   width: 100%;
-  height: 400px;
+  height: 200px;
   border-radius: 30px 30px 0 0;
 }
 
 .advocateElement .name{
-  font-size: larger;
+  font-size: medium;
   font-weight: 600;
   font-style:italic;
   text-transform: uppercase;
