--- a/src/pages/Css/Home.css
+++ b/src/pages/Css/Home.css
@@ -12,8 +12,8 @@
 
 .homeSlide .humanTech {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   transform: rotate(0.514deg);
   flex-shrink: 0;
   border-radius: 17px;
