--- a/src/pages/Css/Drafting2.css
+++ b/src/pages/Css/Drafting2.css
@@ -27,15 +27,6 @@
   color: black;
 }
 
-.form-container .container-fluid {
-  width: 100%;
-  height: auto
-}
-.form-container .container-fluid form{
-  width: 100%;
-  height: auto;
-}
-
 .form-control:focus {
   border-color: inherit;
   -webkit-box-shadow: none;
@@ -57,12 +48,15 @@
   display: flex;
   justify-content: center;
   border-right: 2px solid rgba(0,0,0,0.2);
-  max-height: 110vh;
-  overflow-y: scroll;
 }
 .drafting2 .row .sampleDiv .sample {
   border: 2px solid black;
   padding: 0 40px;
+}
+
+.sample p {
+  font-size: 14px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 992px) {
@@ -71,3 +65,7 @@
         margin-left: 5%;
     }
   }
+
+.wid{
+  max-width: 35vw;
+}
