--- a/src/pages/Css/Home.css
+++ b/src/pages/Css/Home.css
@@ -1,4 +1,7 @@
 .homeSlide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   height: 100vh;
   margin-top: 20px;
@@ -10,16 +13,16 @@
   align-items: center;
 }
 
-.homeSlide .humanTech {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.humanTech {
+  background-size: 100vw 100vh;
+  max-width: 100%;
+  max-height: fit-content;
+  width: 100vw;
+  height: 100vh;
   transform: rotate(0.514deg);
   flex-shrink: 0;
   border-radius: 17px;
   background: 0% / cover no-repeat;
-  /* background-blend-mode: darken; */
-  filter: drop-shadow(-5px 5px 10px black);
 }
 
 
@@ -66,8 +69,8 @@
 
 .homeSlide .p2 {
   position: absolute;
-  top: 400px;
-  left: 45vw;
+  top: 300px;
+  left: 42vw;
   color: #eb934f;
 }
 
